# RAG-news

./: .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml
src/rag_news/: __init__.py
src/rag_news/adapters/: __init__.py  chroma_repository.py  tavily_search.py
src/rag_news/config/: __init__.py  settings.py
src/rag_news/core/: __init__.py  digest.py  embeddings.py  exceptions.py  graph.py  llm.py  rate_limiter.py  resilience.py  service.py
src/rag_news/core/llm_components/: __init__.py  contracts.py  heuristics.py  provider_clients.py  telemetry.py  transforms.py  types.py  workflows.py
src/rag_news/domain/: __init__.py  models.py
src/rag_news/interfaces/: __init__.py  api.py  cli.py  telegram_bot.py
src/rag_news/jobs/: __init__.py  scheduler.py
tests/: test_digest_format.py  test_graph.py  test_llm_fallback.py  test_repository.py  test_resilience.py  test_scheduler.py  test_settings_resilience.py
